--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </ul>
     </div>
 
-    <div class="desktop-menu">
+    <div class="desktop-menu inactive">
         <ul>
           <li>
             <a href="/" class="title">My orders</a>
@@ -155,10 +155,9 @@
       </button>
     </div>
   </aside>
-  </aside>
-
-
-
+  <section class="main-container">
+    <div class="cards-container">
+  </section>
   <script src="./main.js"></script>
 </body>
 </html>
