--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
         </ul>
       </div>
   </nav>
-  <aside class="product-detail inactive">
-    <div class="title-container">
+  <aside class="shopping-cart-detail inactive">
+    <div class="shopping-cart-detail__title-container">
       <img src="./icons/flechita.svg" alt="arrow">
-      <p class="title">My order</p>
+      <p class="shopping-cart-detail__title">My order</p>
     </div>
 
-    <div class="my-order-content">
-      <div class="shopping-cart">
+    <div class="shopping-cart-detail__my-order-content">
+      <div class="shopping-cart-detail__shopping-cart">
         <figure>
           <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
         </figure>
@@ -124,26 +124,7 @@
         <p>$30,00</p>
         <img src="./icons/icon_close.png" alt="close">
       </div>
-
-      <div class="shopping-cart">
-        <figure>
-          <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
-        </figure>
-        <p>Bike</p>
-        <p>$30,00</p>
-        <img src="./icons/icon_close.png" alt="close">
-      </div>
-
-      <div class="shopping-cart">
-        <figure>
-          <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
-        </figure>
-        <p>Bike</p>
-        <p>$30,00</p>
-        <img src="./icons/icon_close.png" alt="close">
-      </div>
-
-      <div class="order">
+      <div class="shopping-cart-detail__order">
         <p>
           <span>Total</span>
         </p>
@@ -152,6 +133,21 @@
 
       <button class="primary-button">
         Checkout
+      </button>
+    </div>
+  </aside>
+  <aside class="product-detail inactive">
+    <div class="product-detail__close">
+      <img src="./icons/icon_close.png" alt="close">
+    </div>
+    <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
+    <div class="product-detail__info">
+      <p>$35,00</p>
+      <p>Bike</p>
+      <p>With its practical position, this bike also fulfills a decorative function, add your hall or workspace.</p>
+      <button class="primary-button add-to-cart-button">
+        <img src="./icons/bt_add_to_cart.svg" alt="add to cart">
+        Add to cart
       </button>
     </div>
   </aside>
